WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282663
AudioSession::shouldManageAudioSessionCategory() is not thread-safe
https://bugs.webkit.org/show_bug.cgi?id=282663
Summary
AudioSession::shouldManageAudioSessionCategory() is not thread-safe
Sihui Liu
Reported
2024-11-05 17:16:02 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-05 17:16:38 PST
<
rdar://problem/139323603
>
Sihui Liu
Comment 2
2024-11-05 17:17:54 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36237
EWS
Comment 3
2024-11-08 09:26:57 PST
Committed
286342@main
(7a45fd2070dd): <
https://commits.webkit.org/286342@main
> Reviewed commits have been landed. Closing PR #36237 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug