AudioSession::shouldManageAudioSessionCategory() is not thread-safe https://bugs.webkit.org/show_bug.cgi?id=282663 rdar://139323603

Reviewed by Eric Carlson.

Make the function thread-safe by making s_shouldManageAudioSessionCategory atomic. Also moving the definition into .cpp
file as WEBCORE_EXPORT class is not supposed to have inline functions according to style checker.

* Source/WebCore/platform/audio/AudioSession.cpp:
(WebCore::AudioSession::shouldManageAudioSessionCategory):
(WebCore::AudioSession::setShouldManageAudioSessionCategory):
* Source/WebCore/platform/audio/AudioSession.h:

Canonical link: https://commits.webkit.org/286342@main