Source/WebCore/platform/audio/AudioSession.h
@@ -163,8 +163,8 @@ public:
 
     virtual void setRoutingArbitrationClient(WeakPtr<AudioSessionRoutingArbitrationClient>&& client) { m_routingArbitrationClient = client; }
 
-    static bool shouldManageAudioSessionCategory() { return s_shouldManageAudioSessionCategory; }
-    static void setShouldManageAudioSessionCategory(bool flag) { s_shouldManageAudioSessionCategory = flag; }
+    static bool shouldManageAudioSessionCategory();
+    static void setShouldManageAudioSessionCategory(bool);
 
     virtual void setHostProcessAttribution(audit_token_t) { };
     virtual void setPresentingProcesses(Vector<audit_token_t>&&) { };
@@ -198,8 +198,6 @@ protected:
     AudioSession::CategoryType m_categoryOverride { AudioSession::CategoryType::None };
     bool m_active { false }; // Used only for testing.
     bool m_isInterrupted { false };
-
-    static bool s_shouldManageAudioSessionCategory;
 };
 
 class AudioSessionInterruptionObserver : public CanMakeWeakPtr<AudioSessionInterruptionObserver> {
